# websockets101

./: README.md
arduino/: client.C
python/: client.py  client_listen.py  client_talk.py  pyproject.toml  server.py
