[tool.poetry]
name = "websockets101"
version = "0.1.0"
description = "Projeto de aprendizado sobre websockets em python"
authors = ["vv <victor.o.tomanik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
